--- a/css/main.css
+++ b/css/main.css
@@ -3,22 +3,22 @@
   padding: 0;
   box-sizing: border-box;
   font-size: 1rem;
-  /* line-height: 2rem; */
 }
 
 a {
   text-decoration: none;
   color: #0b2b40;
-  /* background-color: #d9042b; */
   font-weight: 900;
   padding: .3125rem .625rem;
   border: .0625rem solid #0b2b40;
   border-radius: .3125rem;
 }
+
 a:hover {
   color: rgb(226, 226, 226);
   background-color: #0b2b40;
 }
+
 body {
   display: flex;
   height: 100vh;
@@ -27,6 +27,14 @@ body {
   width: 50%;
   margin: 0 auto;
   background-color: rgb(236, 236, 236);
+}
+
+header {
+  margin-bottom: 1rem;
+}
+
+main {
+  margin-bottom: 1rem;
 }
 
 .input-citation-form {
@@ -57,10 +65,6 @@ body {
   background-color: rgb(127, 225, 255);
 }
 
-.btn.copy {
-  width: 100%;
-}
-
 .result-wrapper {
   display: flex;
   flex-direction: column;
@@ -71,10 +75,6 @@ body {
   border-radius: .3125rem;
   height: 12rem;
   margin-bottom: 1rem;
-}
-
-.result {
-  font-family: 'Times New Roman', Times, serif;
 }
 
 nav {
@@ -90,10 +90,10 @@ ul {
 }
 
 footer {
-  margin-top: 2rem;
   display: flex;
   justify-content: center;
   color: #0b2b40;
+  padding-bottom: 1rem;
 }
 
 .hint {
@@ -105,4 +105,26 @@ footer {
 
 .about {
   line-height: 2rem;
+}
+
+.love {
+  color: red;
+  text-align: center;
+}
+
+.modal {
+  color: #d9042b;
+  width: 75%;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.invisible {
+  visibility: hidden;
+}
+
+@media only screen and (max-width: 850px) {
+  body {
+    width: 75%;
+  }
 }
