--- a/public/css/main.css
+++ b/public/css/main.css
@@ -106,7 +106,8 @@ footer {
   display: flex;
   font-size: .3125rem;
   color: rgb(168, 168, 168);
-  justify-content: flex-end;
+  justify-content: center;
+  text-align: center;
   font-weight: 500;
 }
 
