--- a/public/css/main.css
+++ b/public/css/main.css
@@ -138,6 +138,10 @@ footer {
 
 @media only screen and (max-width: 850px) {
   body {
-    width: 75%;
+    width: 80%;
+  }
+
+  .result-wrapper {
+    height: 14rem;
   }
 }
