--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,8 +19,8 @@ body {
   display: flex;
   height: 100vh;
   flex-direction: column;
-  justify-content: space-between;
   width: 50%;
+  justify-content: space-between;
   margin: 0 auto;
   background-color: #0d2b41;
   color: white;
@@ -40,20 +40,13 @@ main {
   justify-content: space-between;
 }
 
-.raw-citation,
-.message {
+.raw-citation {
   margin-top: 1rem;
-  padding: 0.625rem 0.3125rem;
+  padding: 0.8rem 0.3125rem;
   border-radius: 0.3125rem;
   border: 0.0625rem solid grey;
   margin-bottom: 1rem;
   font-family: "Times New Roman", Times, serif;
-}
-
-.message {
-  width: 50%;
-  margin: 0 auto;
-  text-align: center;
 }
 
 .btn {
@@ -88,10 +81,8 @@ main {
 .btn-mini:last-child {
   background-color: #dd3a58;
 }
-.result-wrapper {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+.result-wrapper,
+.list-wrapper {
   padding: 0.3125rem;
   background-color: rgb(255, 255, 255);
   border: 0.0625rem solid gray;
@@ -99,6 +90,17 @@ main {
   height: 12rem;
   margin-bottom: 1rem;
   color: black;
+}
+
+.result-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.list-wrapper {
+  height: 30rem;
+  overflow-y: auto;
 }
 
 nav {
@@ -128,8 +130,8 @@ footer {
   font-weight: 500;
 }
 
-.about {
-  line-height: 2rem;
+.line-y {
+  line-height: 1.2rem;
 }
 
 .tutorial-link {
@@ -156,6 +158,72 @@ footer {
   visibility: hidden;
 }
 
+.counter-wrapper,
+.home-counter-wrapper {
+  position: relative;
+}
+
+.home-counter,
+.list-counter {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  border: 3px solid white;
+  border-radius: 100%;
+  margin-bottom: 10px;
+  background-color: red;
+  font-weight: 900;
+  text-align: center;
+  padding-top: 9px;
+}
+
+.list-counter {
+  bottom: -75px;
+  right: -10px;
+}
+
+.home-counter {
+  bottom: -95px;
+  right: 0;
+}
+
+.ref {
+  margin-bottom: 1rem;
+}
+
+.delete-ref {
+  position: relative;
+  padding: 0 5px;
+}
+
+.in-text {
+  text-align: right;
+}
+
+@keyframes example {
+  0% {
+    background-color: rgba(255, 0, 0, 0);
+  }
+  100% {
+    background-color: rgba(240, 99, 99, 0.247);
+  }
+}
+
+.delete {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  z-index: 1;
+}
+
+.delete:hover {
+  animation-name: example;
+  animation-duration: 0.5s;
+  animation-fill-mode: forwards;
+}
+
 @media only screen and (max-width: 850px) {
   body {
     width: 80%;
@@ -163,5 +231,19 @@ footer {
 
   .result-wrapper {
     height: 14rem;
+  }
+
+  .list-counter {
+    bottom: -53px;
+    right: -10px;
+  }
+
+  .home-counter {
+    bottom: -42px;
+    right: 0;
+  }
+
+  .list-wrapper {
+    margin-top: 20px;
   }
 }
