--- a/public/css/main.css
+++ b/public/css/main.css
@@ -51,7 +51,6 @@ main {
 
 .btn {
   padding: 0.625rem;
-  margin-bottom: 1rem;
   background-color: aqua;
   border-radius: 0.3125rem;
   border: none;
@@ -88,7 +87,7 @@ main {
   border: 0.0625rem solid gray;
   border-radius: 0.3125rem;
   height: 12rem;
-  margin: 1rem 0 2rem;
+  margin: 1rem 0 1rem;
   color: black;
 }
 
@@ -119,6 +118,7 @@ footer {
   display: flex;
   justify-content: center;
   padding-bottom: 1rem;
+  margin-top: 2rem;
 }
 
 .hint {
